# pouco2000

./: .gitignore  readme.md
.doc/diagram/: pouco2000.drawio
.doc/graph/: pouco2000.drawio
arduino/debug/debug/: debug.ino
arduino/debug/debug-gazebo/: debug_gazebo.ino
arduino/debug/debug_board/board01/: debug_board_board01.ino
arduino/debug/debug_board/board02/: debug_board_board02.ino
arduino/debug/debug_gazebo/: debug_gazebo.ino
arduino/debug/debug_gazebo/board01/: debug_gazebo_board_01.ino
arduino/debug/debug_gazebo/board02/: debug_gazebo_board_02.ino
arduino/lib/pouco2000_ard/: pouco2000.h
arduino/lib/pouco2000_ard/examples/buttons/: buttons.ino
arduino/lib/pouco2000_ard/examples/potentiometers_circle/: potentiometers_circle.ino
arduino/lib/pouco2000_ard/examples/potentiometers_slider/: potentiometers_slider.ino
arduino/lib/pouco2000_ard/examples/switchs_mode/: switchs_mode.ino
arduino/lib/pouco2000_ard/examples/switchs_onoff/: switchs_onoff.ino
arduino/test/hardware/: buttons.ino
arduino/test/simple/: simple.ino
arduino/test/simple_template/: simple_template.ino
arduino/test/switchs_modes/: switchs_modes.ino
arduino/test/switchs_onoff/: switchs_onoff.ino
ros/pouco2000_gazebo/: CMakeLists.txt  package.xml
ros/pouco2000_gazebo/config/: beacon_rot.yaml  beacon_trans.yaml  disc_rot.yaml  drive.yaml  forks.yaml  headlights_back.yaml
ros/pouco2000_gazebo/launch/: controller_interface.launch  display.launch  gazebo.launch  xacro.launch  xacro_gazebo.launch
ros/pouco2000_gazebo/node/: controller.cpp  interface.cpp  simple_controller.cpp
ros/pouco2000_gazebo/urdf/: pouco2000.urdf.xacro  test.urdf  test.urdf.xacro
ros/pouco2000_ros/: CMakeLists.txt  package.xml
ros/pouco2000_ros/include/pouco2000_ros/: pouco2000.hpp  pouco2000_debug.hpp  pouco2000_extractor.hpp  pouco2000_introspection.hpp  pouco2000_monitor.hpp
ros/pouco2000_ros/launch/: debug.launch  monitor.launch  release.launch
ros/pouco2000_ros/msg/: Controller.msg
ros/pouco2000_ros/node/debug/: fake_publisher_buttons.cpp  fake_publisher_potentiometers_circle.cpp  fake_publisher_potentiometers_slider.cpp  fake_publisher_switchs_modes.cpp  fake_publisher_switchs_onoff.cpp
ros/pouco2000_ros/node/release/: controller.cpp  extractor.cpp  filter.cpp  monitor.cpp
ros/pouco2000_ros/param/: default.yaml
ros/pouco2000_ros/src/: pouco2000.cpp  pouco2000_debug.cpp  pouco2000_extractor.cpp  pouco2000_introspection.cpp  pouco2000_monitor.cpp
ros/pouco2000_ros/test/: utest.cpp
ros/pouco2000_ros_example/: CMakeLists.txt  package.xml
ros/pouco2000_ros_example/launch/: switch_img_release.launch
ros/pouco2000_ros_example/node/: switch_img.cpp  twist.cpp
ros/pouco2000_ros_examples/pouco2000_ros_demo/: CMakeLists.txt  package.xml
ros/pouco2000_ros_examples/pouco2000_ros_demo/node/: demo_01_simple.cpp  demo_02_extractor.cpp  demo_03_handle_extractor.cpp  demo_03_handle_extractors.cpp  demo_04_py_handle_extractors.py
ros/pouco2000_ros_examples/pouco2000_ros_gazebo/: CMakeLists.txt  package.xml
ros/pouco2000_ros_examples/pouco2000_ros_gazebo/config/: disc_trans.yaml  headlights_front.yaml
ros/pouco2000_ros_examples/pouco2000_ros_gazebo/launch/: controller_interface.launch  display.launch  gazebo.launch  xacro.launch  xacro_gazebo.launch
ros/pouco2000_ros_examples/pouco2000_ros_gazebo/meshes/disc/: disc.STL
ros/pouco2000_ros_examples/pouco2000_ros_gazebo/node/: controller.cpp  interface.cpp  interface_pouco2000.cpp
ros/pouco2000_ros_examples/pouco2000_ros_gazebo/rviz/: urdf.rviz
ros/pouco2000_ros_examples/pouco2000_ros_gazebo/urdf/: pouco2000.urdf.xacro
ros/pouco2000_ros_examples/pouco2000_ros_popup/: CMakeLists.txt  package.xml
ros/pouco2000_ros_examples/pouco2000_ros_popup/node/: popup.cpp
ros/pouco2000_ros_src/pouco2000_ros/: CMakeLists.txt  package.xml
ros/pouco2000_ros_src/pouco2000_ros/include/pouco2000_ros/: pouco2000.hpp  pouco2000_debug.hpp  pouco2000_introspection.hpp  pouco2000_monitor.hpp
ros/pouco2000_ros_src/pouco2000_ros/launch/: _add_board.launch  debug.launch  monitor.launch  release.launch
ros/pouco2000_ros_src/pouco2000_ros/node/debug/: fake_publisher_buttons.cpp  fake_publisher_potentiometers_circle.cpp  fake_publisher_potentiometers_slider.cpp  fake_publisher_switchs_modes.cpp  fake_publisher_switchs_onoff.cpp
ros/pouco2000_ros_src/pouco2000_ros/node/release/: filter.cpp  monitor.cpp
ros/pouco2000_ros_src/pouco2000_ros/src/: pouco2000.cpp  pouco2000_debug.cpp  pouco2000_introspection.cpp  pouco2000_monitor.cpp
ros/pouco2000_ros_src/pouco2000_ros/test/: utest.cpp
ros/pouco2000_ros_src/pouco2000_ros_msgs/: CMakeLists.txt  package.xml
ros/pouco2000_ros_src/pouco2000_ros_tools/: CMakeLists.txt  package.xml  setup.py
ros/pouco2000_ros_src/pouco2000_ros_tools/include/pouco2000_ros_tools/: pouco2000_extractor.hpp
ros/pouco2000_ros_src/pouco2000_ros_tools/module/pouco2000_ros_tools/: pouco2000_extractor_py.py
ros/pouco2000_ros_src/pouco2000_ros_tools/node/: extractor.cpp
ros/pouco2000_ros_src/pouco2000_ros_tools/src/: pouco2000_extractor.cpp
ros/pouco2000_ros_src/pouco2000_ros_tools/test/: utest.cpp
ros/pouco2000_ros_twist/: CMakeLists.txt  package.xml
ros/pouco2000_ros_twist/src/: twist.cpp
