<?xml version="1.0"?>
<package format="2">
  <name>pouco2000_ros_example</name>
  <version>0.0.0</version>
  <description>The pouco2000_ros_example package</description>

  <maintainer email="hugo@todo.todo">hugo</maintainer>

  <license>TODO</license>


  <doc_depend>doxygen</doc_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pouco2000_ros</build_depend>
  <build_depend>ros_popup_img</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>pouco2000_ros</build_export_depend>
  <build_export_depend>ros_popup_img</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>pouco2000_ros</exec_depend>
  <exec_depend>ros_popup_img</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>

  </export>
</package>
