<?xml version="1.0"?>
<package format="2">
  <name>pouco2000_ros_gazebo</name>
  <version>0.0.0</version>
  <description>The pouco2000_ros_gazebo package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="hugo@todo.todo">hugo</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>diff_drive_controller</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>joint_state_controller</build_depend>
  <build_depend>position_controllers</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>rqt_robot_steering</build_depend>
  <build_depend>xacro</build_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>diff_drive_controller</build_export_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>gazebo_ros_control</build_export_depend>
  <build_export_depend>joint_state_controller</build_export_depend>
  <build_export_depend>position_controllers</build_export_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <build_export_depend>rqt_robot_steering</build_export_depend>
  <build_export_depend>xacro</build_export_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rqt_robot_steering</exec_depend>
  <exec_depend>xacro</exec_depend>
  

  <build_depend>pouco2000_ros_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>pouco2000_ros_msgs</build_export_depend>
  <exec_depend>pouco2000_ros_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <build_depend>pouco2000_ros_tools</build_depend>
  <build_export_depend>pouco2000_ros_tools</build_export_depend>
  <exec_depend>pouco2000_ros_tools</exec_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
