<?xml version="1.0"?>
<package format="2">
  <name>pouco2000_ros_msgs</name>
  <version>0.0.0</version>
  <description>The pouco2000_ros_msgs package</description>

  <maintainer email="hugo.pousseur@gmail.com">Hugo POUSSEUR</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>

  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>

  </export>
</package>
