<?xml version="1.0"?>
<package format="2">
  <name>pouco2000_ros_tools</name>
  <version>0.0.0</version>
  <description>The pouco2000_ros_tools package</description>

  <maintainer email="hugo.pousseur@gmail.com">Hugo POUSSEUR</maintainer>
  <license>Apache 2.0</license>
  
  <test_depend>gtest</test_depend>
  <doc_depend>doxygen</doc_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pouco2000_ros_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>pouco2000_ros_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>pouco2000_ros_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <export>

  </export>
</package>
